05-exposeapps/banana.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: ingress-nginx
  labels:
    app: banana
spec: 
  containers: 
  - name: banana-app
    image: hashicorp/http-echo
    args: 
      - "-text=This is banana"  

---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: ingress-nginx
spec: 
  selector:
    app: banana
  ports:
  - port: 5678
